# WayFi

./: .gitignore  README.md  plan.md  pyproject.toml  run_webui.py
config/: wayfi.yaml
docs/: interview-answers.md
scripts/: provision.sh
scripts/ralph/: steps.json
scripts/systemd/: wayfi-calendar.service  wayfi-dnsmasq.service  wayfi-hostapd.service  wayfi-llm.service  wayfi-notifier.service  wayfi-orchestrator.service  wayfi-webui.service
src/wayfi/: __init__.py  orchestrator.py
src/wayfi/calendar/: __init__.py  google.py  icloud.py  location.py  outlook.py  sync.py
src/wayfi/network/: __init__.py  ap.py  connector.py  scanner.py  scorer.py  speedtest.py
src/wayfi/notify/: __init__.py  sms.py
src/wayfi/portal/: __init__.py  cloud_solver.py  detector.py  heuristic.py  llm_solver.py  submitter.py
src/wayfi/portal/patterns/: antlabs.yaml  aruba.yaml  boingo.yaml  cisco.yaml  generic.yaml  hilton.yaml  ihg.yaml  marriott.yaml  nomadix.yaml  ruckus.yaml  starbucks.yaml
src/wayfi/vault/: __init__.py  vault.py
src/wayfi/vpn/: __init__.py  manager.py
src/wayfi/webui/: app.py
src/wayfi/webui/routers/: __init__.py  calendar.py  logs.py  networks.py  patterns.py  (+3 more)
tests/: __init__.py  conftest.py  e2e_orchestrator.py  e2e_portal_chain.py  test_calendar.py  test_heuristic.py  test_orchestrator.py  test_portal_detector.py  test_scanner.py  test_sms.py  test_speedtest.py  test_vault.py  test_webui.py
tests/mock_portal/: __init__.py  server.py
tests/mock_portal/portals/: aruba.html  generic.html  hilton.html  marriott.html  nomadix.html  starbucks.html
(+9 files in other folders)
